more cleaning up of hamburger icon, add shape-rendering: crispEdges to avoid blurry lines

--- a/web/assets/scss/components/_nav.scss
+++ b/web/assets/scss/components/_nav.scss
@@ -195,8 +195,10 @@
 
   .icon-hamburger {
     width: 24px;
-    height: 16px;
-    fill: $black;
+    height: 18px;
+    stroke: $black;
+    stroke-width: 1px;
+    shape-rendering: crispEdges;
   }
 }
 
